fix before scrollbar

--- a/test_project/my-first-extension/SideBar/content.css
+++ b/test_project/my-first-extension/SideBar/content.css
@@ -1,10 +1,37 @@
 html {
-    transition: all 0.3s ease !important;
-    box-sizing: border-box !important;
+    transition: width 0.3s ease, margin 0.3s ease !important;
+    overflow: hidden !important;
+    height: 100% !important;
 }
 
 body {
-    transition: margin 0.3s ease !important;
+    transition: all 0.3s ease !important;
+    height: 100% !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    position: relative !important;
+    margin: 0 !important;
+}
+
+/* Shifting Classes */
+html.qs-shift-left body {
+    width: calc(100% - 60px) !important;
+    margin-left: 60px !important;
+}
+
+html.qs-shift-left.qs-expanded body {
+    width: calc(100% - 280px) !important;
+    margin-left: 280px !important;
+}
+
+html.qs-shift-right body {
+    width: calc(100% - 60px) !important;
+    margin-right: 60px !important;
+}
+
+html.qs-shift-right.qs-expanded body {
+    width: calc(100% - 280px) !important;
+    margin-right: 280px !important;
 }
 
 /* The root container for our injected sidebar */
